fix footer/header text, add word-wrap css

--- a/_sass/_screen.scss
+++ b/_sass/_screen.scss
@@ -35,6 +35,7 @@ body {
   font-size: $base-font-size;
   line-height: $base-line-height;
   text-rendering: optimizeLegibility;
+  word-wrap: break-word;
 }
 body,
 .wrapper {
@@ -143,6 +144,7 @@ a {
 }
 #main h1 {
   font-size: $base-font-size * 2;
+  line-height: $base-line-height * 1.5;
   // color: $secondary-text-color;
   margin-bottom: 2rem;
 }
